# src/modules/router/adminRouter.ts
@@ -1,6 +1,5 @@
 import { Router } from "express";
 const adminRouter = Router();
-import { io } from "../../index";
 
 //admin functions
 import {
@@ -29,28 +28,89 @@ import verifyAdmin from "../admin/adminAuthentication";
 import { toggleStatus } from "../notifications/notificationController";
 
 //admin functionalities
-adminRouter.post("/notify", verifyAdmin, /* #swagger.tags = ['Admin - Notification Service'] */ notifyUser);
-adminRouter.post("/admin-login", /* #swagger.tags = ['Admin */  loginAdmin);
-adminRouter.patch("/resetPassword", verifyAdmin, /* #swagger.tags = ['Admin */ resetPassword);
-adminRouter.post("/product", verifyAdmin, /* #swagger.tags = ['Admin - Product Management */ upload.array("images"), addProduct);
+adminRouter.post(
+  "/notify",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - Notification Service'] */ notifyUser
+);
+adminRouter.post("/admin-login", /* #swagger.tags = ['Admin */ loginAdmin);
+adminRouter.patch(
+  "/resetPassword",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin */ resetPassword
+);
+adminRouter.post(
+  "/product",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - Product Management */ upload.array("images"),
+  addProduct
+);
 adminRouter.post(
   "/updateProduct",
-  verifyAdmin, /* #swagger.tags = ['Admin - Product Management */
+  verifyAdmin /* #swagger.tags = ['Admin - Product Management */,
   upload.array("images"),
   updateProduct
 );
-adminRouter.get("/", verifyAdmin, /* #swagger.tags = ['Admin - User Management'] */ getAllUsers);
-adminRouter.get("/orders", verifyAdmin, /* #swagger.tags = ['Admin - Order Management'] */  getAllOrders);
-adminRouter.get("/salesReport", verifyAdmin, /* #swagger.tags = ['Admin - Report'] */  salesReport);
-adminRouter.post("/orderStatus", verifyAdmin, /* #swagger.tags = ['Admin - Order Management'] */  updateOrderStatus);
-adminRouter.patch("/approveOrder", /* #swagger.tags = ['Admin - Order Management'] */  approveOrder);
-adminRouter.get("/getUser/:id", verifyAdmin, /* #swagger.tags = ['Admin - User Management'] */  getUserById);
-adminRouter.patch("/toggleStatus", verifyAdmin, /* #swagger.tags = ['Admin - User Management'] */  toggleUserAccess);
-adminRouter.patch("/notification", /* #swagger.tags = ['Admin - User Management'] */  toggleStatus);
-adminRouter.post("/notifyAll", /* #swagger.tags = ['Admin - Notification Service'] */  notifyAllUsers);
-adminRouter.post("/notifySelected", /* #swagger.tags = ['Admin - Notification Service'] */  notifySelectedUsers);
-adminRouter.delete("/:id", verifyAdmin, /* #swagger.tags = ['Admin - User Management'] */ deleteUser);
-adminRouter.get("/repeatTask", verifyAdmin, /* #swagger.tags = ['Admin'] */  assignCronJob);
-adminRouter.get("/testMailAutomation", verifyAdmin, /* #swagger.tags = ['Admin'] */  mailAutomation);
+adminRouter.get(
+  "/",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - User Management'] */ getAllUsers
+);
+adminRouter.get(
+  "/orders",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - Order Management'] */ getAllOrders
+);
+adminRouter.get(
+  "/salesReport",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - Report'] */ salesReport
+);
+adminRouter.post(
+  "/orderStatus",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - Order Management'] */ updateOrderStatus
+);
+adminRouter.patch(
+  "/approveOrder",
+  /* #swagger.tags = ['Admin - Order Management'] */ approveOrder
+);
+adminRouter.get(
+  "/getUser/:id",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - User Management'] */ getUserById
+);
+adminRouter.patch(
+  "/toggleStatus",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - User Management'] */ toggleUserAccess
+);
+adminRouter.patch(
+  "/notification",
+  /* #swagger.tags = ['Admin - User Management'] */ toggleStatus
+);
+adminRouter.post(
+  "/notifyAll",
+  /* #swagger.tags = ['Admin - Notification Service'] */ notifyAllUsers
+);
+adminRouter.post(
+  "/notifySelected",
+  /* #swagger.tags = ['Admin - Notification Service'] */ notifySelectedUsers
+);
+adminRouter.delete(
+  "/:id",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin - User Management'] */ deleteUser
+);
+adminRouter.get(
+  "/repeatTask",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin'] */ assignCronJob
+);
+adminRouter.get(
+  "/testMailAutomation",
+  verifyAdmin,
+  /* #swagger.tags = ['Admin'] */ mailAutomation
+);
 
 export default adminRouter;
